--- a/css/what.css
+++ b/css/what.css
@@ -15,14 +15,14 @@
 
 #what-1c {
 	top: 7.3%;
-	left: 45.1%;
+	left: 43.1%;
 	width: 11.5%;
 }
 
 #what-1d {
 	top: 7.3%;
 	left: 75.8%;
-	width: 18.5%;
+	width: 19.5%;
 }
 
 #what-1e {
@@ -206,7 +206,7 @@
 }
 
 #use-2f {
-	top: 87.4%;
+	top: 86.3%;
 	left: 5.9%;
 	width: 24.3%;
 	color: #6f6f6e;
@@ -215,12 +215,13 @@
 }
 
 #use-2g {
-	top: 86.7%;
+	top: 86.3%;
 	left: 37.1%;
 	width: 9.6%;
 	color: #6f6f6e;
 	text-align: center;
 	line-height: 120%;
+	font-size:medium;
 }
 
 #use-23 {
@@ -234,7 +235,7 @@
 #use-3a {
 	top: 60.2%;
 	left: 70.7%;
-	width: 13.5%;
+	width: 17.6%;
 	color: #2e3645;
 }
 
@@ -247,25 +248,25 @@
 }
 
 #use-3c {
-	top: 77.2%;
+	top: 76.2%;
 	left: 58.9%;
-	width: 13.6%;
+	width: 17.6%;
 	color: #6f6f6e;
 	text-align: center;
 	line-height: 120%;
 }
 
 #use-3d {
-	top: 77.2%;
+	top: 76.2%;
 	left: 80.1%;
-	width: 15%;
+	width: 17.6%;
 	color: #6f6f6e;
 	text-align: center;
 	line-height: 120%;
 }
 
 #use-3e {
-	top: 87%;
+	top: 86.3%;
 	left: 65.3%;
 	width: 23%;
 	color: #6f6f6e;
