--- a/css/spend.css
+++ b/css/spend.css
@@ -49,12 +49,14 @@
 	top: 1.8%;
 	left: 5.6%;
 	width: 40.5%;
+	font-size:50%;
 }
 
 #spend-2b {
 	top: 1.8%;
-	left: 58.7%;
-	width: 37.5%;
+	left: 55.7%;
+	width: 42.5%;
+	font-size:50%;
 }
 
 #spend-2c {
