--- a/css/what.css
+++ b/css/what.css
@@ -374,13 +374,14 @@
 
 
 #store-4a {
-	top: 88.7%;
-	left: 1.2%;
+	top: 87.0%;
+	left: 0.5%;
 	width: 30%;
 	color: #2e3645;
-	font-weight: 600;
-	line-height: 128%;
+	font-weight: 400;
+	line-height: 90%;
 	text-align: center;
+	font-size:90%;
 }
 
 #store-4b {
